{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 78,
  "lineage": "a53cdb02-4b61-bf6f-605d-8001406290a3",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-09069d04b47138a4e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09069d04b47138a4e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069fcb6e753549290"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "EKS-GROUP6-CLUSTER-cluster-20240106083836521100000009",
            "name_prefix": "EKS-GROUP6-CLUSTER-cluster-",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS-GROUP6-CLUSTER-cluster"
            },
            "tags_all": {
              "Name": "EKS-GROUP6-CLUSTER-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-069fcb6e753549290",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069fcb6e753549290",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04cf11518811da449",
                  "sg-0a1743ad63e0f5666",
                  "sg-0beb14b765d705e0c"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09069d04b47138a4e"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09069d04b47138a4e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09069d04b47138a4e"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09069d04b47138a4e"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09069d04b47138a4e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09069d04b47138a4e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "EKS-GROUP6-CLUSTER-node-20240106083836474700000008",
            "name_prefix": "EKS-GROUP6-CLUSTER-node-",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS-GROUP6-CLUSTER-node",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "owned"
            },
            "tags_all": {
              "Name": "EKS-GROUP6-CLUSTER-node",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1255979615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09069d04b47138a4e",
            "security_group_rule_id": "sgr-03fea5fba6ceee2dd",
            "self": false,
            "source_security_group_id": "sg-069fcb6e753549290",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-301233743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-01db5bffca998ad11",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3692777733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-013d63a77933652b5",
            "self": false,
            "source_security_group_id": "sg-09069d04b47138a4e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1921252917",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-0eb7d6c22f8591973",
            "self": false,
            "source_security_group_id": "sg-09069d04b47138a4e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3150027171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-0e0f027b11c54617d",
            "self": false,
            "source_security_group_id": "sg-09069d04b47138a4e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2828903810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-0ab5a4243b788824d",
            "self": false,
            "source_security_group_id": "sg-09069d04b47138a4e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3426522697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-0fa15e4c6c47d4db1",
            "self": false,
            "source_security_group_id": "sg-09069d04b47138a4e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1355419561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-04a02bc1283815000",
            "self": false,
            "source_security_group_id": "sg-09069d04b47138a4e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1723841076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-03ec7dd64180c2a6f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1985917133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-05c23a633b3acda01",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3523285794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-069fcb6e753549290",
            "security_group_rule_id": "sgr-096a2ce69c43c4f55",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acd84715b171a9df",
            "association_id": "eipassoc-0eb0c5e6cb4bd297f",
            "domain": "vpc",
            "id": "eipalloc-0acd84715b171a9df",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-035c5764a03a5df6c",
            "private_dns": "ip-10-0-11-159.eu-west-2.compute.internal",
            "private_ip": "10.0.11.159",
            "public_dns": "ec2-13-42-134-146.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.134.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08efb47f5a180eec6",
            "association_id": "eipassoc-0228ef3d9b6102006",
            "domain": "vpc",
            "id": "eipalloc-08efb47f5a180eec6",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0001885826ab7039c",
            "private_dns": "ip-10-0-12-208.eu-west-2.compute.internal",
            "private_ip": "10.0.12.208",
            "public_dns": "ec2-13-43-169-208.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.169.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065aa9d6f79652313",
            "association_id": "eipassoc-0c2ccfe0edab91eb9",
            "domain": "vpc",
            "id": "eipalloc-065aa9d6f79652313",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0f9382e6e6659464d",
            "private_dns": "ip-10-0-13-118.eu-west-2.compute.internal",
            "private_ip": "10.0.13.118",
            "public_dns": "ec2-18-171-124-227.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.124.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proj-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:internet-gateway/igw-0c04d771497f51a73",
            "id": "igw-0c04d771497f51a73",
            "owner_id": "330616035002",
            "tags": {
              "Environment": "dev",
              "Name": "dev-project-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-project-igw"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acd84715b171a9df",
            "association_id": "eipassoc-0eb0c5e6cb4bd297f",
            "connectivity_type": "public",
            "id": "nat-08c0d72073765dd38",
            "network_interface_id": "eni-035c5764a03a5df6c",
            "private_ip": "10.0.11.159",
            "public_ip": "13.42.134.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039ae5c1242cfae41",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08efb47f5a180eec6",
            "association_id": "eipassoc-0228ef3d9b6102006",
            "connectivity_type": "public",
            "id": "nat-037e2f7528674e917",
            "network_interface_id": "eni-0001885826ab7039c",
            "private_ip": "10.0.12.208",
            "public_ip": "13.43.169.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003052142fefb5296",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065aa9d6f79652313",
            "association_id": "eipassoc-0c2ccfe0edab91eb9",
            "connectivity_type": "public",
            "id": "nat-0da6db82322253279",
            "network_interface_id": "eni-0f9382e6e6659464d",
            "private_ip": "10.0.13.118",
            "public_ip": "18.171.124.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d233baedd5b7df7",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-3"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c04d771497f51a73",
            "id": "r-rtb-0b02f4022e771cae91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b02f4022e771cae9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-06e0200ff056de16e",
            "id": "rtb-06e0200ff056de16e",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c0d72073765dd38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-06e096f927dcae776",
            "id": "rtb-06e096f927dcae776",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037e2f7528674e917",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-09e54ce7e61528a32",
            "id": "rtb-09e54ce7e61528a32",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da6db82322253279",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-0b02f4022e771cae9",
            "id": "rtb-0b02f4022e771cae9",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c04d771497f51a73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5af60020fb42134",
            "route_table_id": "rtb-06e0200ff056de16e",
            "subnet_id": "subnet-06d8b1b75fa216f2b"
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.privateRT",
            "module.networking.aws_subnet.private-subnets",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c1a83e69d0e207",
            "route_table_id": "rtb-06e096f927dcae776",
            "subnet_id": "subnet-091c5d1909df54006"
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.privateRT",
            "module.networking.aws_subnet.private-subnets",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a0524cf949dc5a5",
            "route_table_id": "rtb-09e54ce7e61528a32",
            "subnet_id": "subnet-03c5639ae3ab2368f"
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.privateRT",
            "module.networking.aws_subnet.private-subnets",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b021d5296a1fa55f",
            "route_table_id": "rtb-0b02f4022e771cae9",
            "subnet_id": "subnet-039ae5c1242cfae41"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d423af706853a50",
            "route_table_id": "rtb-0b02f4022e771cae9",
            "subnet_id": "subnet-003052142fefb5296"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2074912247b7837",
            "route_table_id": "rtb-0b02f4022e771cae9",
            "subnet_id": "subnet-07d233baedd5b7df7"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-06d8b1b75fa216f2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d8b1b75fa216f2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-091c5d1909df54006",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091c5d1909df54006",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-03c5639ae3ab2368f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c5639ae3ab2368f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-039ae5c1242cfae41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039ae5c1242cfae41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-003052142fefb5296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003052142fefb5296",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-07d233baedd5b7df7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d233baedd5b7df7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "projectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:vpc/vpc-0f083f7f976cf677e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa82f1beed2b39cc",
            "default_route_table_id": "rtb-07d2ceae8e0ae749b",
            "default_security_group_id": "sg-0336bd93a2a086380",
            "dhcp_options_id": "dopt-0ee78848abbaafd1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f083f7f976cf677e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d2ceae8e0ae749b",
            "owner_id": "330616035002",
            "tags": {
              "Environment": "dev",
              "Name": "GROUP6-PROJECT-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "GROUP6-PROJECT-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_ctrl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-0a6757e5cf39e8b90",
            "description": "for outbound subnet data packets/traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6757e5cf39e8b90",
            "ingress": [],
            "name": "outbound-sg",
            "name_prefix": "",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_ctrl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-0eea4be20a4bafe70",
            "description": "for inbound data packets/traffic",
            "egress": [],
            "id": "sg-0eea4be20a4bafe70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "86.168.81.4/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "inbound-sg",
            "name_prefix": "",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-044310a128b642847",
            "description": "Allow inbound traffic from my IP address",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044310a128b642847",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.168.81.4/32"
                ],
                "description": "postgresql ingress route 1",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "86.168.81.4/32"
                ],
                "description": "postgresql ingress route 2",
                "from_port": 5433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5433
              }
            ],
            "name": "Allow postgres",
            "name_prefix": "",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres-sg"
            },
            "tags_all": {
              "Name": "postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f083f7f976cf677e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.data.external.myipaddr"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0253c0864b8b223c3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0253c0864b8b223c3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a6757e5cf39e8b90",
            "security_group_rule_id": "sgr-0253c0864b8b223c3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.egress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0c508b838d156b7cb",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0c508b838d156b7cb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a6757e5cf39e8b90",
            "security_group_rule_id": "sgr-0c508b838d156b7cb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.egress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0a1d6b0e6ceb92310",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0a1d6b0e6ceb92310",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-0a1d6b0e6ceb92310",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port2_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0884109b4f8c66f56",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-0884109b4f8c66f56",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-0884109b4f8c66f56",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port3_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-05e8465f7332dde98",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-05e8465f7332dde98",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-05e8465f7332dde98",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port4_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0df8a1b9ff1373e7e",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 8080,
            "id": "sgr-0df8a1b9ff1373e7e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-0df8a1b9ff1373e7e",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0ff70eec6da68a911",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ff70eec6da68a911",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-0ff70eec6da68a911",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0b943871a789f2ef0",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-0b943871a789f2ef0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-0b943871a789f2ef0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-088af4cf89d5a79d2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-088af4cf89d5a79d2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-088af4cf89d5a79d2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0c065104d0a3285dc",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-0c065104d0a3285dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-0c065104d0a3285dc",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inboundssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-04610bc6b0104f2c1",
            "cidr_ipv4": "86.168.81.4/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04610bc6b0104f2c1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eea4be20a4bafe70",
            "security_group_rule_id": "sgr-04610bc6b0104f2c1",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl",
            "module.security.data.external.myipaddr"
          ]
        }
      ]
    }
  ]
}